Revision history for LCS::XS.

0.02  2015-06-23 22:52:36 CEST
        - backwards compatible

0.01  2015-06-21 19:48:36 CEST
        - first release